--- a/src/styles/AddMovie.css
+++ b/src/styles/AddMovie.css
@@ -47,46 +47,12 @@ table {
   border-spacing: 0;
 }
 
-#app-wrapper {
+form {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: 1fr 50px;
 }
 
-#titleBar {
+label {
   display: grid;
-  grid-column: 1 / -1;
-  background-color: lightgrey;
-  align-items: center;
-}
-
-#appTitle {
-  font-size: 20px;
-  font-weight: bold;
-  margin-left: 10px;
-}
-
-#movieList {
-  display: grid;
-  grid-column: 2;
-  grid-row: 5 / span 5;
-}
-
-#searchBar {
-  display: grid;
-  grid-column: 2;
-  grid-row: 3;
-  align-items: center;
   justify-items: stretch;
 }
-
-#addMovies {
-  display: grid;
-  grid-column: 2;
-  grid-row: 2;
-  align-items: center;
-  justify-items: stretch;
-}
-
-
-
